// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RawEditor renders as expected with content equal to null 1`] = `
<div>
  <Alert
    variant="danger"
  >
    You are using the raw 
    html
     editor.
  </Alert>
</div>
`;

exports[`RawEditor renders as expected with default behavior 1`] = `
<div>
  <Alert
    variant="danger"
  >
    You are using the raw 
    html
     editor.
  </Alert>
  <injectIntl(ShimmedIntlComponent)
    innerRef={
      Object {
        "current": Object {
          "value": "Ref Value",
        },
      }
    }
    lang="html"
    value="eDiTablE Text"
  />
</div>
`;

exports[`RawEditor renders as expected with lang equal to xml 1`] = `
<div>
  <injectIntl(ShimmedIntlComponent)
    innerRef={
      Object {
        "current": Object {
          "value": "Ref Value",
        },
      }
    }
    lang="xml"
    value="eDiTablE Text"
  />
</div>
`;
